[package]
name = "pgroup"
version = "0.1.0"
authors = ["Kaviraj <kavirajkanagaraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
serde = { version = "1.0.110", features= ["derive"] }
bincode = "1.2.1"
